# quant_trading

./: .gitignore  INSTRUCTION.md  market_data.py  pyproject.toml  strategy.py
backtrade/: run_backtest.py
bolling_grid/: INSTRUCTION.md  backtest.py  strategy.py
doji_scalp/: INSTRUCTION.md  backtest.py  backtrader_adapter.py  reference.txt  strategy.py  strategy_executor.py
ml_prediction/: HDF5_USAGE.md  INSTRUCTION.md  README.md  README_SHARDING.md  __init__.py  backtest.py  data_loader.py  features.py  hdf5_dataloader.py  label_generator.py  model.py  requirements.txt  reshard_hdf5.py  sharded_dataset.py  sharded_hdf5_dataloader.py  split_dataset.py  strategy.py  train.py
ml_prediction/data_pipeline/: __init__.py  __main__.py  data_source.py  preprocessor.py  storage_manager.py
ml_prediction/datasets/: __init__.py
