[project]
name = "doji-scalping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "backtrader[plotting]>=1.9.78.123",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "pytz>=2025.2",
    "requests>=2.32.4",
]

[tool.pyright]
reportMissingTypeStubs = false
